service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sample-app
  type: clusterIP
